--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -13,9 +13,8 @@
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
       </div>
       <div class="home-header-button-container">
-        <div routerLink="/user/register" class="btn-secondary-light btn-small btn">{{'menu.main.create_account'| translate}}</div>
-        <h6 class="sign-or-create-text">or</h6>
-        <div routerLink="/login" class="btn-primary-light btn-small btn sign-in-button">{{'menu.main.sign_in'| translate}}</div>
+        <div routerLink="/user/register" class="btn-secondary-light btn-small btn">{{'menu.main.create_account'| translate}}</div><br/>
+        <div routerLink="/login" class="btn-primary-light btn-small btn start-sign-in-button">{{'menu.main.sign_in'| translate}}</div>
       </div>
     </div>
   </div>
