Remove scrollbar for job cards

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -91,6 +91,10 @@
     overflow-y: scroll;
     white-space: nowrap;
 
+    &::-webkit-scrollbar {
+      display: none;
+    }
+
     .item-container {
       display: inline-block;
       width: 180px;
