--- a/src/app/views/404/404.component.html
+++ b/src/app/views/404/404.component.html
@@ -3,6 +3,6 @@
     {{'page_not_found_error.header' | translate}}
   </h1>
   <h3 class="col-xs-12 not-found-component-text">
-    {{'page_not_found_error.subtitle' | translate}}
+    {{'page_not_found_error.subtitle' | translate}} 😞
   </h3>
 </div>
