--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -1,78 +1,78 @@
 <div class="confirmation-container">
   <div *ngIf="type === 'user-applied'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/jobs/1"></a>
+    <i routerLink="/jobs/1" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'user.apply.confirmation' | translate}}</div>
-        <div class="item-content">{{'user.apply.confirmation.text' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'user.apply.confirmation' | translate}}</h3>
+        <p class="confirmation-item-content">{{'user.apply.confirmation.text' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'profile-created'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/user"></a>
+    <i routerLink="/user" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'profile.create.confirmation.title' | translate}}</div>
-        <div class="item-content">{{'profile.create.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'common.find_assignment' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'profile.create.confirmation.title' | translate}}</h3>
+        <p class="confirmation-item-content">{{'profile.create.confirmation.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/jobs/1">{{'common.find_assignment' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'assignment-created'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/user"></a>
+    <i routerLink="/user" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'assignment.created.title' | translate}}</div>
-        <div class="item-content">{{'assignment.created.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'assignment.created.title' | translate}}</h3>
+        <p class="confirmation-item-content">{{'assignment.created.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'profile-created-applied'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/user"></a>
+    <i routerLink="/user" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'profile.created.assignment.pending.email.titel' | translate}}</div>
-        <div class="item-content">{{'profile.create.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'profile.created.assignment.pending.email.titel' | translate}}</h3>
+        <p class="confirmation-item-content">{{'profile.create.confirmation.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'user-assignment-approved'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/user"></a>
+    <i routerLink="/user" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'user.assignment.approved' | translate}}</div>
-        <div class="item-content">{{'user.assignment.add_reference' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'user.assignment.approved' | translate}}</h3>
+        <p class="confirmation-item-content">{{'user.assignment.add_reference' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'user-assignment-rejected-confirmation'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/user"></a>
+    <i routerLink="/user" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'user.assignment.rejected.confirmation' | translate}}</div>
-        <div class="item-content">{{'user.assignment.rejected.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'user.assignment.rejected.confirmation' | translate}}</h3>
+        <p class="confirmation-item-content">{{'user.assignment.rejected.confirmation.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/user">{{'assignment.created.continue' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'password-reset-link-sent'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/forgot-password"></a>
+    <i routerLink="/forgot-password" class="fa fa-times fa-2x confirm-close-button"></i>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-envelope fa-5x" aria-hidden="true"></i></div>
-        <div class="item-title">{{'login.forgot_password.confirmation' | translate}}</div>
-        <div class="item-content">{{'login.forgot_password.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/forgot-password">{{'common.back' | translate}}</a></div>
+        <h3 class="confirmation-item-title">{{'login.forgot_password.confirmation' | translate}}</h3>
+        <p class="confirmation-item-content">{{'login.forgot_password.confirmation.description' | translate}}</p>
+        <div class="button-container"><a class="btn-primary btn-small btn" routerLink="/forgot-password">{{'common.back' | translate}}</a></div>
       </div>
     </div>
   </div>
