--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -1,6 +1,6 @@
 <div class="confirmation-container">
   <div *ngIf="type === 'contact-message-sent'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/jobs/1"></a>
+    <a class="close-button" routerLink="/contact"></a>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-envelope fa-5x" aria-hidden="true"></i></div>
