--- a/src/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/src/app/components/my-jobs-item/my-jobs-item.component.html
@@ -6,24 +6,7 @@
   <div>
       <h3><translation-item [text]="job.name" [translation]="job.translated.name"></translation-item></h3>
 
-    <section *ngIf="isCompanyUser">
-      <p *ngIf="section == 'current'">{{'assignment.status.user_application.will_perform' | translate:{'candidate_name': job.jobUsers[0].user.firstName} }}</p>
-
-      <p *ngIf="section == 'recent'"><em>{{job.jobUsers.length}} {{'company.assignments.applications' | translate}}</em></p>
-
-      <p *ngIf="section == 'waiting'">
-        <em>{{'assignment.status.you_hired' | translate}} {{job.jobUsers[0].user.firstName}} {{job.users[0].user.lastName}}</em>
-      </p>
-
-      <p *ngIf="section == 'history'">
-        <em>{{'assignment.status.you_hired' | translate}} {{job.jobUsers[0].user.firstName}} {{job.jobUsers[0].user.lastName}}</em>
-      </p>
-      <p *ngIf="section == 'history'">
-        <rating [rating]="job.jobUsers[0].ratingScore"></rating>
-      </p>
-    </section>
-
-    <section *ngIf="!isCompanyUser">
+    <section>
       <p *ngIf="section == 'current'">{{job.street}}</p>
       <p *ngIf="section == 'current'">
         <span *ngIf="!job.jobUsers[0].accepted && !job.jobUsers[0].willPerform">{{'user.apply.confirmation' | translate}}</span>
@@ -34,10 +17,5 @@
 
       <p *ngIf="section == 'history'">{{job.company.name}}</p>
     </section>
-  </div>
-
-  <div class="user-image" *ngIf="isCompanyUser && (section == 'history' || section == 'waiting')">
-    <img class="user-info-image" *ngIf="job.jobUsers[0].user.images.length > 0" src="{{ job.jobUsers[0].user.images[0].imageUrl}}"/>
-    <img class="user-info-image" *ngIf="job.jobUsers[0].user.images.length == 0" src="/assets/images/placeholder-profile-image.png"/>
   </div>
 </div>
