Fixed images on translation menu
Removed Skrivbyran image. Centered image. Fixed max-width

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,8 +111,7 @@
 
           <div class="language-menu-credentials-container row">
             <p class="col-xs-12 prominent">{{'menu.language.translation_by_probono' | translate}}:</p>
-            <img class="col-xs-6 language-menu-credentials-image" src="/assets/images/skrivbyra.png" alt="Semantix" />
-            <img class="col-xs-6" src="/assets/images/semantix.png" alt="Semantix" />
+            <img class="col-xs-12 language-menu-credentials-container-image" src="/assets/images/semantix.png" alt="Semantix" />
           </div>
 
           <div class="language-menu-contributers-wrapper row">
