Added padding to language-menu-information-container

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -258,6 +258,7 @@
 
     .language-menu-information-container {
       color: $color-gray-200;
+      padding: 6px;
 
       p {
         font-size: 12px;
