Display when jobs are finished on the front page

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -56,11 +56,11 @@
           </div>
         </div>
 
-        <div *ngIf="userJob.concluded" class="jobs-salary-container user-jobs-salary-container-inactive">
+        <div *ngIf="userJob.job_ended" class="jobs-salary-container user-jobs-salary-container-inactive">
           {{'home_page.user_jobs_slider_item.status.finished' | translate | uppercase}}
         </div>
 
-        <div *ngIf="userJob.willPerform" class="jobs-salary-container user-jobs-salary-container-active">
+        <div *ngIf="userJob.willPerform && !userJob.job_ended" class="jobs-salary-container user-jobs-salary-container-active">
           {{'home_page.user_jobs_slider_item.status.ongoing' | translate | uppercase}}
         </div>
 
