--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -20,7 +20,7 @@
       <div class="form-group forgot-password-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'login.forgot_password.error' | translate}}</div>
         <button type="submit" [disabled]="!forgotPasswordForm.valid" class="btn-primary btn-small btn">{{'common.submit' | translate}}</button>
-        <a class="fs-m0" routerLink="/login">{{'common.login' | translate}}</a>
+        <a class="fs-m0" routerLink="{{JARoutes.login.url()}}">{{'common.login' | translate}}</a>
       </div>
     </form>
 
