--- a/src/app/views/confirmation/confirmation.component.html
+++ b/src/app/views/confirmation/confirmation.component.html
@@ -1,34 +1,34 @@
 <div class="confirmation-container">
   <div *ngIf="type === 'contact-message-sent'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/contact"></a>
+    <a class="close-button" routerLink="{{JARoutes.contact.url()}}"></a>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-envelope fa-5x" aria-hidden="true"></i></div>
         <div class="item-title">{{'contact.confirmation.title' | translate}}</div>
         <div class="item-content"></div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/contact">{{"contact.confirmation.navigate.back" | translate}}</a></div>
+        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="{{JARoutes.contact.url()}}">{{"contact.confirmation.navigate.back" | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'user-applied-for-job'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/jobs/1"></a>
+    <a class="close-button" routerLink="{{JARoutes.jobs.url(['1'])}}"></a>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-check fa-5x" aria-hidden="true"></i></div>
         <div class="item-title">{{'user.apply.confirmation' | translate}}</div>
         <div class="item-content">{{'user.apply.confirmation.text' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/jobs/1">{{'user.apply.find_more' | translate}}</a></div>
+        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="{{JARoutes.jobs.url(['1'])}}">{{'user.apply.find_more' | translate}}</a></div>
       </div>
     </div>
   </div>
   <div *ngIf="type === 'password-reset-link-sent'" class="confirmation-item table text-center">
-    <a class="close-button" routerLink="/forgot-password"></a>
+    <a class="close-button" routerLink="{{JARoutes.forgotPassword.url()}}"></a>
     <div class="table-row">
       <div class="table-cell">
         <div class="item-icon"><i class="fa fa-envelope fa-5x" aria-hidden="true"></i></div>
         <div class="item-title">{{'login.forgot_password.confirmation' | translate}}</div>
         <div class="item-content">{{'login.forgot_password.confirmation.description' | translate}}</div>
-        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="/forgot-password">{{'common.back' | translate}}</a></div>
+        <div class="button-container"><a class="btn-primary btn-large btn" routerLink="{{JARoutes.forgotPassword.url()}}">{{'common.back' | translate}}</a></div>
       </div>
     </div>
   </div>
