--- a/src/app/views/job-details/job-details.component.html
+++ b/src/app/views/job-details/job-details.component.html
@@ -24,8 +24,8 @@
       <div class="btn-secondary-light btn-medium btn" *ngIf="(user && !userJob)" (click)="onApplyForJobButtonClick()">{{'assignment.status.apply' | translate}}</div>
 
       <div *ngIf="!user" class="sign-in-or-create-container">
-        <div routerLink="/login" class="btn-secondary-light btn-small btn sign-in-button">{{'assignment.status.log_in' | translate}}</div><br/>
-        <div routerLink="/user/register" class="btn-primary-light btn-small btn">{{'assignment.status.create_account' | translate}}</div>
+        <div routerLink="{{JARoutes.login.url()}}" class="btn-secondary-light btn-small btn sign-in-button">{{'assignment.status.log_in' | translate}}</div><br/>
+        <div routerLink="{{JARoutes.registerUser.url()}}" class="btn-primary-light btn-small btn">{{'assignment.status.create_account' | translate}}</div>
       </div>
 
       <h3 class="applied-text" *ngIf="userJob && !userJob.accepted">{{'assignment.status.applied' | translate}}</h3>
