Removed deprecated job.amount and replaced with grossAmount

--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-xs-9">
-      <span class="total-salary">{{job.amount}} {{job.hourlyPay.currency}}</span>
+      <span class="total-salary">{{job.grossAmount}} {{job.hourlyPay.currency}}</span>
       <span class="salary-per-hour">
         {{job.hours}}h ({{job.hourlyPay.grossSalary}} {{job.hourlyPay.currency}}/h)
       </span>
